fix: truncate email to prevent overflow
see trello card for details

fixes issue 7607

--- a/src/app/cdk/side-bar/modals/modal-email/modal-email.component.scss
+++ b/src/app/cdk/side-bar/modals/modal-email/modal-email.component.scss
@@ -33,6 +33,9 @@ mat-form-field {
 .primary-email-label {
   display: flex;
   align-items: center;
+  width: 20em;
+  overflow: hidden;
+  text-overflow: ellipsis;
   mat-icon {
     margin-inline-end: 16px;
   }
